Webserver in aparte class//library

--- a/Tuin13-Controller/data/www/index.html
+++ b/Tuin13-Controller/data/www/index.html
@@ -117,7 +117,10 @@
                 <div class="card-body">
                     <dl class="card-text">
                         <dt>IP address</dt>
-                        <dd class="load" data-src="api/network/ipaddress.txt">---</dd>
+                        <dd>
+                            <span class="load" data-src="api/network/ipaddress.txt">---</span><br/>
+                            <span class="load" data-src="api/network/ipaddressv6.txt">0:0</span>
+                         </dd>
 
                         <dt>SSID</dt>
                         <dd class="load" data-src="api/network/ssid.txt">---</dd>
