Sunset and sunrise

--- a/Tuin13-Controller/data/www/index.html
+++ b/Tuin13-Controller/data/www/index.html
@@ -87,8 +87,8 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text"><span class="second" data-src="/api/time/current.txt"></span></p>
-                    <p class="card-text">Zon op: 06:34</p>
-                    <p class="card-text">Zon onder: 20:27</p>
+                    <p class="card-text">Zon op: <span class="load" data-src="api/time/sunrise.txt">---</span></p>
+                    <p class="card-text">Zon onder: <span class="load" data-src="api/time/sunset.txt">---</span></p>
                 </div>
                 <div class="card-footer">
                     &nbsp;
