--- a/Tuin13-Controller/data/www/index.html
+++ b/Tuin13-Controller/data/www/index.html
@@ -63,7 +63,7 @@
         <div class="jumbotron">
             <h1 class="display-3">Tuin-13</h1>
             <hr>
-            <div class="lead">Bestuur elementen in de tuin.</div>
+            <div class="lead">Onze tuinlamp.</div>
         </div>
 
         <div class="row">
@@ -164,37 +164,9 @@
                                 }
                             </script>
                         </div>
-                        <!--
-                        <div class="input-group mr-2">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text" id="btnGroupAddon"><i data-feather="sun"></i> &nbsp; Aan
-                                    tot</div>
-                            </div>
-                            <input type="time" class="form-control" placeholder="Tijd" aria-label="Input group example"
-                                aria-describedby="btnGroupAddon">
-                            <div class="input-group-append">
-                                <a href="#" class="btn btn-outline-secondary"><i data-feather="check"></i></a>
-                            </div>
-                        </div>
-                        <a href="#" class="btn btn-primary">Schema aanpassen</a>
-                        -->
                     </div>
                 </div>
             </div>
-            <!--
-            <div class="card border-success">
-                <div class="card-header lead">
-                    Water
-                </div>
-                <div class="card-body">
-                    <p class="card-text">Avond: Zon-onder -> 1 uur</p>
-                    <p class="card-text">Manueel: 30 min</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-success">Aanpassen</a>
-                </div>
-            </div>
-            -->
         </div>
 
         <div class="row mt-4">
@@ -221,7 +193,7 @@
                     Afgelopen 24 uur
                 </div>
                 <div class="card-body">
-                    <p class="card-text">Lamp: 2 uur 4 min</p>
+                    <p class="card-text"><i data-feather="trending-up"></i> <span class="second" data-src="api/lamp/timer.txt">---</span></p>
                 </div>
             </div>
 
